--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,14 +1,42 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster|RaleWay&display=swap");
 
-
+//  variables and mixin
 $fonts-stack : "Raleway",
 sans-serif;
+$font-secondary: "Lobster";
 $primary-color: #f2f2f2;
 $secondary-color: #333;
+$dark-gray: #272727;
+$light-gray: #dadada;
+
 
 @mixin shadow {
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
 }
+
+@mixin mod-shadow {
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
+}
+
+@mixin new-shadow {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+@mixin transition-ease {
+    transition: all 800ms ease-in-out;
+}
+
+@mixin transition-ease3s {
+    transition: all .3s ease-in-out;
+}
+
+@mixin transition-text {
+    transition: ease-in-out 1s;
+    transform-origin: center;
+}
+
+// end variable and mixin
+
 
 * {
     margin: 0;
@@ -49,7 +77,7 @@ body {
         .nav-link {
             list-style-type: none;
             padding: 1rem;
-            opacity: 1;
+            opacity: 0;
 
 
             a {
@@ -64,6 +92,153 @@ body {
 // end header styling
 
 // main section
+section {
+    min-height: 100vh;
+}
+
+.title-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $dark-gray;
+    @include mod-shadow;
+
+    .title-header {
+        font-weight: 300;
+        font-size: 4.5rem;
+
+        .text-wrapper {
+            position: absolute;
+            display: inline-block;
+            padding: .1rem .05rem .15rem;
+            line-height: 1rem;
+        }
+
+        .line {
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            height: 3px;
+            width: 100%;
+            background-color: $primary-color;
+            transform-origin: .5 0;
+        }
+
+        .letters {
+            display: inline-block;
+            opacity: 0;
+        }
+    }
+}
+
+// hero section
+
+.hero-section {
+    position: fixed;
+    top: 0;
+    z-index: -1;
+
+    img {
+        height: 100%;
+        width: 100%;
+    }
+
+    .hero-title {
+        position: absolute;
+        bottom: 50%;
+        right: 5%;
+        font-family: $font-secondary;
+        font-size: 8rem;
+        color: $dark-gray;
+        opacity: 0;
+        transform: translateX(0);
+        @include transition-ease;
+    }
+
+    svg {
+        font-family: $font-secondary;
+        font-size: 10rem;
+        font-weight: bold;
+        position: absolute;
+        height: 100vh;
+        top: 0;
+        left: 0;
+
+        text {
+            @include transition-text;
+        }
+
+        rect {
+            mask: url(#mask);
+        }
+
+        mask {
+            rect {
+                fill: white;
+            }
+        }
+    }
+}
+
+
+
+.article-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+    grid-gap: 2rem;
+    padding: 8rem;
+    background-color: $dark-gray;
+    @include mod-shadow;
+
+    .article {
+
+        &:hover {
+            img {
+                transform: scale(1.1);
+            }
+
+            h3 {
+                transform: translateY(-0.5em);
+            }
+
+            .article-body {
+                transform: translateY(0.5rem);
+            }
+        }
+
+
+        img {
+            // width: 200px;
+            // height: 200px;
+            @include transition-ease3s;
+        }
+
+        display: flex;
+        background-color: $light-gray;
+        color: $dark-gray;
+        @include new-shadow;
+        cursor: pointer;
+        overflow: hidden;
+        opacity: 0;
+
+        &-body {
+            padding: 2rem;
+            text-align: justify;
+            @include transition-ease3s;
+
+            h3 {
+                font-size: 2rem;
+                margin-bottom: 1rem;
+                @include transition-ease3s;
+            }
+        }
+    }
+}
+
+// end hero section
 
 
 // end main section
